--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>i love you</title>
+  <title>to my jana</title>
   <style>
     body {
       font-family: "Courier New", Courier, monospace;
@@ -116,7 +116,8 @@
     alt="jar" 
     class="interactive-image" 
     draggable="true"
-    onmousedown="startDrag(event)" 
+    onmousedown="startDrag(event)"
+    ontouchstart="startDrag(event)" 
     onclick="showTextbox()"
   >
 
@@ -126,6 +127,7 @@
     class="interactive-image" 
     draggable="true" 
     onmousedown="startDrag(event)" 
+    ontouchstart="startDrag(event)"
     onclick="openPopup()"
     style="position: absolute; top: 7px; right: 7px; width: 100px; height: auto;"
   >
